# triangular_arbitrage_example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  sequences.cpp  sequences.h  tri_arb_config.cpp  tri_arb_config.h  tri_arb_sequence.h  tri_arb_spec.cpp  tri_arb_spec.h  triangular_arbitrage.cpp  triangular_arbitrage.h  trinagular_arbitrage.cpp
